message PrefabLabeTotalMessage
{   
    required int32  seqIndex = 1;    //索引号
    repeated PrefabeLabelMessage prefabLables = 2;     //文件对应编号
}

message PrefabeLabelMessage
{
	required int32 startSeq = 1;	//开始索引
	required int32 nowSeq = 2;		//目前用到的索引
	repeated LabelNumMessage labelNums = 3;	//文本与id对应
}

message LabelNumMessage
{
	required string transName = 1;			//节点名
	required int32 labelNum = 2;			//文本索引
}